# doxa-mvp

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  instructions.md  mock_openai_server.py  pyproject.toml
backend/: AUTH_README.md  __init__.py  auth.py  config.py  llm.py  main.py
backend/data_access/: __init__.py  loader.py  queries.py
backend/graph/: __init__.py
backend/graph/chatbot/: __init__.py  graph.py  nodes.py  state.py
backend/graph/crawler/: __init__.py  graph.py  nodes.py  state.py
backend/graph/reporter/: __init__.py  (+3 more)
backend/routes/: ai.py  auth.py  chat.py  crawler.py  data.py  demo.py  health.py  reports.py
backend/scripts/: index_mock_data.py
backend/services/: __init__.py  alerts.py  assistant.py  crawler.py  data_store.py  orchestrator.py  procurement.py  reports.py  retrieval.py  schema.py
backend/utils/: __init__.py  dates.py  llm.py  text.py
backend/vector/: __init__.py  embed.py  ingest.py  iris_client.py  preflight.py  search.py
data/: README.md
data/expanded/: doxa_invoices_expanded.xlsx  doxa_payments_expanded.xlsx  doxa_procurement_mock_expanded.xlsx  doxa_purchasing_expanded.xlsx
data/raw/: delivery_order_202606031055.csv  delivery_order_item_202606031056.csv  goods_receipt_202606031056.csv  goods_receipt_item_202606031057.csv  purchase_order_202606031055.csv  purchase_req_202606031053.csv  purchase_req_item_202606031054.csv
docs/: iris-vector-search.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
(+88 files in other folders)
