[project]
name = "doxa-mvp"
version = "0.1.0"
description = "DOXA MVP"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["langgraph (>=1.2.4,<2.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
