[project]
name = "doxa-mvp"
version = "0.1.0"
description = "DOXA MVP"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["langgraph (>=1.2.4,<2.0.0)", "fastapi (>=0.136.3,<0.137.0)", "uvicorn[standard] (>=0.48.0,<0.49.0)", "python-dotenv (>=1.2.2,<2.0.0)", "langchain-openai (>=1.2.2,<2.0.0)", "pandas (>=2.0.0,<3.0.0)", "scalar-fastapi (>=1.0.0,<2.0.0)", "intersystems-irispython (>=5.3.2,<6.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
